# 100-dias-Curso-completo-de-Python

./: high.score  main.py  my.ideas  pyproject.toml  requirements.txt  to.do
archivos/: inventory.txt  pizza.txt
dias/: dia-1.py  dia-10.py  dia-11.py  dia-12.py  dia-13.py  dia-14.py  dia-15.py  dia-16.py  dia-17.py  dia-18.py  dia-19.py  dia-2.py  dia-20.py  dia-21.py  dia-22.py  dia-23.py  dia-24.py  dia-25.py  dia-26.py  dia-27.py  dia-28.py  dia-29.py  dia-3.py  dia-30.py  dia-31.py  dia-32.py  dia-33.py  dia-34.py  dia-35.py  dia-36.py  dia-37.py  dia-38.py  dia-39.py  dia-4.py  dia-40.py  dia-41.py  dia-42.py  dia-43.py  dia-44.py  dia-45.py  (+30 more)
