[tool.poetry]
name = "repl-nix-dias-61-a-70"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "repl_nix_dias_61_a_70"}]

[tool.poetry.dependencies]
python = "^3.10"
pytz = "^2024.1"
prompt-toolkit = "^3.0.43"
pillow-pil = "0.1dev"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
